; ModuleID = '/home/carl/AnghaBench/libgit2/tests/checkout/extr_head.c_test_checkout_head__typechange_index_and_workdir.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/checkout/extr_head.c_test_checkout_head__typechange_index_and_workdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.stat = type { i32 }

@GIT_CHECKOUT_OPTIONS_INIT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@GIT_CHECKOUT_FORCE = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@GIT_RESET_HARD = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"testrepo/new.txt\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"new.txt\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_checkout_head__typechange_index_and_workdir() #0 {
  %1 = alloca %struct.TYPE_4__, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.stat, align 4
  %5 = bitcast %struct.TYPE_4__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %5, i8* align 4 bitcast (%struct.TYPE_4__* @GIT_CHECKOUT_OPTIONS_INIT to i8*), i64 4, i1 false)
  %6 = load i32, i32* @GIT_CHECKOUT_FORCE, align 4
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* @g_repo, align 4
  %9 = call i32 @git_revparse_single(i32** %2, i32 %8, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32, i32* @g_repo, align 4
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @GIT_RESET_HARD, align 4
  %14 = call i32 @git_reset(i32 %11, i32* %12, i32 %13, i32* null)
  %15 = call i32 @cl_git_pass(i32 %14)
  %16 = call i32 @p_chmod(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 493)
  %17 = call i32 @cl_must_pass(i32 %16)
  %18 = load i32, i32* @g_repo, align 4
  %19 = call i32 @git_repository_index(i32** %3, i32 %18)
  %20 = call i32 @cl_git_pass(i32 %19)
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @git_index_add_bypath(i32* %21, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  %23 = call i32 @cl_git_pass(i32 %22)
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @git_index_write(i32* %24)
  %26 = call i32 @cl_git_pass(i32 %25)
  %27 = load i32, i32* @g_repo, align 4
  %28 = call i32 @git_checkout_head(i32 %27, %struct.TYPE_4__* %1)
  %29 = call i32 @cl_git_pass(i32 %28)
  %30 = call i32 @p_stat(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), %struct.stat* %4)
  %31 = call i32 @cl_git_pass(i32 %30)
  %32 = getelementptr inbounds %struct.stat, %struct.stat* %4, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @GIT_PERMS_IS_EXEC(i32 %33)
  %35 = icmp ne i32 %34, 0
  %36 = xor i1 %35, true
  %37 = zext i1 %36 to i32
  %38 = call i32 @cl_assert(i32 %37)
  %39 = load i32*, i32** %2, align 8
  %40 = call i32 @git_object_free(i32* %39)
  %41 = load i32*, i32** %3, align 8
  %42 = call i32 @git_index_free(i32* %41)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_revparse_single(i32**, i32, i8*) #2

declare dso_local i32 @git_reset(i32, i32*, i32, i32*) #2

declare dso_local i32 @cl_must_pass(i32) #2

declare dso_local i32 @p_chmod(i8*, i32) #2

declare dso_local i32 @git_repository_index(i32**, i32) #2

declare dso_local i32 @git_index_add_bypath(i32*, i8*) #2

declare dso_local i32 @git_index_write(i32*) #2

declare dso_local i32 @git_checkout_head(i32, %struct.TYPE_4__*) #2

declare dso_local i32 @p_stat(i8*, %struct.stat*) #2

declare dso_local i32 @cl_assert(i32) #2

declare dso_local i32 @GIT_PERMS_IS_EXEC(i32) #2

declare dso_local i32 @git_object_free(i32*) #2

declare dso_local i32 @git_index_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
